# Toolbox

./: .gitattributes
sdk/: sdk.cmake
sdk/debug/: brotlicommon.lib  brotlidec.lib  convert_woff2ttf_fuzzer.lib  convert_woff2ttf_fuzzer_new_entry.lib  hcompress.lib  hcrypto.lib  hmath.lib  hmisc.lib  qhotkey.lib  woff2common.lib  woff2dec.lib  woff2enc.lib
sdk/include/hcompress/: converter.h  hcompress.h  hcompress_global.h
sdk/include/hcrypto/: basex.h  crypto_global.h  hcrypto_global.h  onetimepassword.h  steganography.h
sdk/include/hfontawesome/: QtAwesomeEnumGenerated.h  hfontawesome.h  hfontawesome_global.h
sdk/include/hmath/: geo.h  hmath_global.h
sdk/include/hmisc/: hmisc.h  hmisc_global.h  humanized.h  singletonguard.h
sdk/include/hqt/: hqt_global.h
sdk/include/hqt/corelib/: happsingleton.h
sdk/include/hqt/gui/: hfonticon.h
sdk/include/hqt/widgets/: hcommonstyle.h  hflowlayout.h  himageview.h  hplaceholderlayout.h  hplaintextedit.h  hreveal.h  hshadowframe.h  hswitchbutton.h  hwidget.h
sdk/release/: brotlicommon.lib  brotlidec.lib  brotlienc.lib  convert_woff2ttf_fuzzer.lib  convert_woff2ttf_fuzzer_new_entry.lib  glog.lib  hcompress.lib  hcrypto.lib  hfontawesome.lib  hmath.lib  hmisc.lib  hqt.lib  qhotkey.lib  woff2common.lib  woff2dec.lib  woff2enc.lib
sdkExample/: .gitignore  CMakeLists.txt  main.cpp
translations/: qt_ca.qm  qt_de.qm  qt_fr.qm  qt_tr.qm
